fix for webkit and overflow:auto. Why do I keep doing that?

--- a/standard_base_css.css
+++ b/standard_base_css.css
@@ -86,7 +86,7 @@ img{border:0}
 .clearfix::after{clear:both;content:'.';display:block;font-size:0px;height:0px;line-height:0;visibility:hidden}
 
 /*icon blocks*/
-.iconblock{overflow:auto}
+.iconblock{overflow:visible}
 .icnblk_img{text-decoration:none;float:left;margin-right:1em;cursor:pointer}
 .icnblk_cntnt{display:table-cell;vertical-align:top;*zoom:1}
 .icnblk_cntnt h1,.icnblk_cntnt h2,.icnblk_cntnt h3,.icnblk_cntnt h4{margin:0 0 .6923em}
